# coherent-predictor

./: .gitignore  AUTHORS  CITATION.cff  LICENSE  README.md  codemeta.json  pyproject.toml  requirements.txt
data/: demo_2D_HIT.npz
docs/: DATA.md  METHOD.md
notebooks/: 01_core_predictor.ipynb  02_siren_pinn.ipynb  03_ftle_evaluation.ipynb
src/coherent_predictor/: __init__.py  data_io.py  derivatives.py  ftle.py  ftle_eval.py  predictor.py  siren_pinn.py
tests/: _audit_modes.py  _smoke_on_real_data.py  test_core.py
tools/: build_notebooks.py
